--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,9 +30,21 @@ services:
     networks:
       - mynetwork
     command: ["task", "runserver"]
+  mongodb:
+    image: mongo:latest
+    container_name: database-mongodb
+    ports:
+      - 8081:27017
+    volumes:
+      - mongodb-vol:/data/db
+      - ./app/dump:/dump
+      - ./dumpdatabase.sh:/docker-entrypoint-initdb.d/init.sh:ro
+    networks:
+      - mynetwork
 
 volumes:
   ollama:
+  mongodb-vol:
 
 networks:
   mynetwork:
