--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "uvicorn (>=0.34.0,<0.35.0)",
     "faiss-cpu (>=1.10.0,<2.0.0)",
     "requests (>=2.32.3,<3.0.0)",
-    "taskipy (>=1.14.1,<2.0.0)"
+    "taskipy (>=1.14.1,<2.0.0)",
+    "motor (>=3.7.0,<4.0.0)",
+    "pydantic[email] (>=2.11.0,<3.0.0)"
 ]
 
 [tool.taskipy.tasks]
